--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,91 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: Roboto, sans-serif, Helvetica;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1, h2, h3 {
+  margin: 0.5rem 0;
+}
+
+h1{
+  font-size:1.5rem;
+  color: white;
+}
+
+h2{
+  font-size:1.2rem;
+}
+
+h3{
+  font-size:1rem;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+.row{
+  display: flex;
+  justify-content: space-between;
+}
+.col-1{
+  flex:1;
+}
+.col-2{
+  flex:2;
+}
+.flex{
+  display: flex;
+  flex-wrap: wrap;
+}
+.flex > div{
+  flex:1 1 250px;
+  margin-left:1rem;
+}
+.block{
+  background-color:#637E94;
+  padding: 1rem;
+  margin:0;
+}
+.block-cart{
+  background-color:#D3D7DA;
+  padding: 1rem;
+  margin-top:1rem;
+}
+
+.row.center{
+  align-items: center;
+}
+
+img.small {
+  
+  max-width: 80%;
+}
+
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+.add{
+  background-color: cadetblue;
+  width: 1.5rem;
+  border: none;
+  
+}
+.remove{
+  background-color:indianred;
+  width: 1.5rem;
+  border: none;
+  margin-left: 0.5rem;
+}
+.text-right{
+  text-align: right;
 }
