--- a/src/modal.css
+++ b/src/modal.css
@@ -1,10 +1,46 @@
 .modal{
-  background-color: white;
-  display: none;
-  position: fixed;
-  width: 200px;
-  height: 200px;
-  left: 200px;
-  top: 40px;
+  background-color: rgba(0,0,0,0.8);
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  left: 0px;
+  top: 0px;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container{
+  background-color: #fff;
   color: black;
+  width: 20%;
+  height: 40%;
+  text-align: center;
+}
+.close {
+  background: transparent;
+  outline: none;
+  width: 32px;
+  height: 32px;
+  border: none;
+  font-size:24px;
+  top:10px;
+  right: calc(-100% + 48px);
+  cursor: pointer;
+  display: flex;
+  position: relative;
+  align-items: center;
+}
+
+.bt-finalizar{
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
